--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/Jochizan/courses-node/issues"
   },
-  "homepage": "https://github.com/Jochizan/courses-node#readme"
+  "homepage": "https://github.com/Jochizan/courses-node#readme",
+  "dependencies": {
+    "is-odd": "^3.0.1"
+  }
 }
