Terminating mini API with mongoose and postman

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "courses-node",
   "version": "1.0.0",
-  "description": "Node.js courses",
-  "main": "index.js",
+  "description": "Node.js API with mongodb",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/Jochizan/courses-node/issues"
   },
-  "homepage": "https://github.com/Jochizan/courses-node#readme"
+  "homepage": "https://github.com/Jochizan/courses-node#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3"
+  }
 }
