--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "courses-node",
-  "version": "1.0.0",
-  "description": "Node.js courses",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "Chat similar con nodejs clone de telegram",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/Jochizan/courses-node/issues"
   },
-  "homepage": "https://github.com/Jochizan/courses-node#readme"
+  "homepage": "https://github.com/Jochizan/courses-node#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
