--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Jochizan/courses-node#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.17.1"
   }
 }
